# ChatRoomApplication

./: .gitignore  Functions.text  README.md
ChatRoomApplication/: AlexNotes.txt  Cargo.toml
ChatRoomApplication/src/: color_formatting.rs  main.rs
ChatRoomApplicationClient/: AlexNotes.txt  Cargo.toml
ChatRoomApplicationClient/src/: chat_client.rs  color_formatting.rs  main.rs  message.rs  messages.rs  terminal_erasing.rs  user_commands.rs
ChatRoomApplicationServer/: Cargo.toml
ChatRoomApplicationServer/src/: main.rs  message.rs
