[package]
name = "ChatRoomApplicationClient"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "2.1"
rpassword = "7.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
